support arbitrary number of coils in coil_tools

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -95,6 +95,13 @@ add_executable(vacfield.x
     math_constants.f90
     libneo_kinds.f90
 )
+add_executable(coil_convert.x
+    magfie/coil_convert.f90
+    magfie/coil_tools.f90
+    fftw3.f90
+    math_constants.f90
+    libneo_kinds.f90
+)
 
 find_package(OpenMP)
 
@@ -131,6 +138,15 @@ target_link_libraries(vacfield.x PUBLIC
   ${fftw_lib}
   ${fftw_omp_lib}
 )
+target_link_libraries(coil_convert.x PUBLIC
+  OpenMP::OpenMP_Fortran
+  hdf5_tools
+  ${HDF5_HL_LIBRARIES}
+  ${HDF5_LIBRARIES}
+  ${fftw_lib}
+  ${fftw_omp_lib}
+)
 
 target_include_directories(magfie PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
 target_include_directories(vacfield.x PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
+target_include_directories(coil_convert.x PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
