--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,5 @@
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
-find_package(MPI REQUIRED)
-
 set (MAIN_LIB ${MAIN_LIB} libneo)
 set (HDF5_TOOLS_LIB ${HDF5_TOOLS_LIB} hdf5_tools)
 set (MAGFIE_LIB ${MAGFIE_LIB} magfie)
@@ -10,31 +8,12 @@ set(PROJLIBS /proj/plasma/Libs/ CACHE STRING "Common library path")
 include_directories(${MPI_Fortran_INCLUDE_PATH})
 include_directories(${PROJECT_BINARY_DIR})
 
-
-if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
-
-  set (CMAKE_Fortran_FLAGS "-g -cpp -std=f2008")
-
-elseif (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
-
-  set (CMAKE_Fortran_FLAGS "-g -cpp -heap-arrays -stand f08")
-
-endif ()
-
-find_package(BLAS)
-find_package(LAPACK)
-find_package(MPI REQUIRED)
-
 include_directories(${CMAKE_BINARY_DIR}/src/)
 include_directories(${CMAKE_SOURCE_DIR}/src/MyMPILib)
 include_directories(${CMAKE_SOURCE_DIR}/src/hdf5_tools)
 include_directories(${MPI_Fortran_INCLUDE_PATH})
 
-
-find_package(HDF5 COMPONENTS C Fortran Fortran_HL REQUIRED)
-if (NOT ${HDF5_FOUND})
-	message(FATAL_ERROR "HDF5 not found, please set environment variable HDF5_ROOT to the correct path")
-endif ()
+# Assumes previous include of hdf5_tools/CMakeLists.txt for find_package
 include_directories(${HDF5_INCLUDE_DIRS})
 
 execute_process(COMMAND nc-config --flibs
