--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,6 +76,9 @@ target_link_libraries(test_system_utility.x
 add_executable(test_util.x source/test_util.f90)
 target_link_libraries(test_util.x ${COMMON_LIBS})
 
+add_executable(test_interpolate.x source/test_interpolate.f90)
+target_link_libraries(test_interpolate.x ${COMMON_LIBS})
+
 
 ## Standard tests according to standard libneo Fortran test convention.
 
@@ -90,6 +93,7 @@ add_fortran_test(test_efit_class)
 add_fortran_test(test_geqdsk_tools)
 add_fortran_test(test_hdf5_tools)
 add_fortran_test(test_util)
+add_fortran_test(test_interpolate)
 
 ## Custom tests
 
