vacfield now works with option vector_potential

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ include(CMakeSources.in)
 
 if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
-  set (CMAKE_Fortran_FLAGS "-cpp -g -fbacktrace -std=f2008")
+  set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fcheck=all -fbacktrace -std=f2008")
 
 elseif (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
 
