--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,22 +48,28 @@ find_program(NF_CONFIG "nf-config")
 
 if (NF_CONFIG)
 execute_process(COMMAND nf-config --includedir
-                OUTPUT_VARIABLE NETCDFINCLUDE_DIR
-                OUTPUT_STRIP_TRAILING_WHITESPACE)
+                OUTPUT_VARIABLE NETCDFINCLUDE_DIR)
+execute_process(COMMAND nc-config --libdir
+				OUTPUT_VARIABLE NETCDFLIB_DIR)
 execute_process(COMMAND nf-config --flibs
-                OUTPUT_VARIABLE NETCDF_FLIBS
-                OUTPUT_STRIP_TRAILING_WHITESPACE)
+                OUTPUT_VARIABLE NETCDF_FLIBS)
 else()
 message(SEND_ERROR "nf-config not found. Please install libnetcdff-dev")
 endif()
 
+string(STRIP ${NETCDFINCLUDE_DIR} NETCDFINCLUDE_DIR)
+string(STRIP ${NETCDFLIB_DIR} NETCDFLIB_DIR)
+string(STRIP ${NETCDF_FLIBS} NETCDF_FLIBS)
+
 message(STATUS "NetCDF include path: " ${NETCDFINCLUDE_DIR})
+message(STATUS "NetCDF lib path: " ${NETCDFLIB_DIR})
 message(STATUS "NetCDF Fortran libs: " ${NETCDF_FLIBS})
 
 # Replace space by semicolon in the Fortran libs
 string(REPLACE " " ";" NETCDF_FLIBS ${NETCDF_FLIBS})
 
 include_directories(${NETCDFINCLUDE_DIR})
+link_directories(${NETCDFLIB_DIR})
 add_link_options(${NETCDF_FLIBS})
 
 add_subdirectory(src/MyMPILib)
