--- a/tools/h5merge/CMakeLists.txt
+++ b/tools/h5merge/CMakeLists.txt
@@ -17,9 +17,9 @@ set(CMAKE_Fortran_FLAGS "-g -Wall")
 find_package(HDF5 COMPONENTS C HL Fortran REQUIRED)
 include_directories(${HDF5_INCLUDE_DIRS})
 
-find_library(HDF5_TOOLS_LIB NAMES hdf5_tools libhdf5_tools.a PATHS ${CMAKE_SOURCE_DIR}/../../Build-12-2-0/ ${CMAKE_BINARY_DIR}/ PATH_SUFFIXES src/hdf5_tools/ NO_DEFAULT_PATH)
+find_library(HDF5_TOOLS_LIB NAMES hdf5_tools libhdf5_tools.a PATHS ${CMAKE_SOURCE_DIR}/../../build/ ${CMAKE_BINARY_DIR}/ PATH_SUFFIXES src/hdf5_tools/ NO_DEFAULT_PATH)
 
-include_directories(${CMAKE_SOURCE_DIR}/../../Build-12-2-0/ ${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/../../build/ ${CMAKE_BINARY_DIR})
 
 set(Interface_Libs
   ${HDF5_TOOLS_LIB}
