--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 [Bb]uild/*
 [Bb]uild-*/*
 # Build directories of tools.
-*/*/[Bb]uild-*/
+*/*/[Bb]uild/*
+*/*/[Bb]uild-*/*
 
 # Ignore error files and log files.
 *.err
