OpenMP and compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,13 @@ include(CMakeSources.in)
 
 if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
-  set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fcheck=all -fbacktrace -std=f2008")
+  set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fcheck=all -fbacktrace \
+    -fno-realloc-lhs -fopenmp -std=f2008")
 
 elseif (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
 
-  set (CMAKE_Fortran_FLAGS "-cpp -heap-arrays -stand f08")
+  set (CMAKE_Fortran_FLAGS "-cpp -heap-arrays -check all -traceback \
+    -assume norealloc_lhs -stand f08 -qopenmp")
 
 endif ()
 
