read singularity avoidance strategy from namelist

--- a/tools/vacfield_AUG.in
+++ b/tools/vacfield_AUG.in
@@ -18,4 +18,11 @@
   ! prefactor in Biot-Savart law, e.g. 5 windings
   ! and conversion from A to statA / c_0
   prefactor = 5.0e-1
+  ! switch to avoid singularity near coils
+  ! 0: no measures
+  ! 1: set maximum eccentricity
+  ! 2: set minimum distance
+  ! 3: set minimum eccentricity and distance
+  ! 4: use stretch_coords
+  avoid_div = 0
 /
