--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [build-system]
-requires = ["scikit-build-core", "numpy"]
+requires = ["scikit-build-core", "numpy", "f90wrap"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "libneo"
-version = "0.0.1"
+version = "0.0.3"
 dependencies = ["numpy"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+]
 
 [tool.scikit-build]
-ninja.minimum-version = "1.10"
-cmake.minimum-version = "3.20"
 build-dir = "build"
