--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
   GNU:
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/itpplasma/devel:latest
+      image: ghcr.io/itpplasma/devel:latest,
+      options: --user root
 
     name: Build and test
     steps:
