--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -92,9 +92,14 @@ target_link_libraries(standardise_geqdsk.x magfie)
 add_executable(vacfield.x src/magfie/vacfield.f90)
 add_executable(coil_convert.x src/magfie/coil_convert.f90)
 
-find_library(fftw_lib NAMES "fftw3")
-find_library(fftw_omp_lib NAMES "fftw3_omp")
-find_path(fftw_include_dir NAMES "fftw3.h")
+# Find FFTW
+find_package(FFTW REQUIRED)
+
+if(FFTW_FOUND)
+    message(STATUS "Found FFTW")
+else()
+    message(FATAL_ERROR "FFTW not found")
+endif()
 
 # Assumes previous include of hdf5_tools/CMakeLists.txt for find_package
 include_directories(${HDF5_INCLUDE_DIRS})
@@ -107,8 +112,7 @@ rkf45
 netcdf
 netcdff
 hdf5_tools
-${fftw_lib}
-${fftw_omp_lib}
+${FFTW_LIBRARIES}
 ${HDF5_HL_LIBRARIES}
 ${HDF5_LIBRARIES}
 ${BLAS_LIBRARIES}
@@ -117,6 +121,6 @@ ${LAPACK_LIBRARIES}
 target_link_libraries(vacfield.x PUBLIC magfie)
 target_link_libraries(coil_convert.x PUBLIC magfie)
 
-target_include_directories(magfie PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
-target_include_directories(vacfield.x PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
-target_include_directories(coil_convert.x PUBLIC ${hdf5_tools_include_dir} ${fftw_include_dir})
+target_include_directories(magfie PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUDE_DIRS})
+target_include_directories(vacfield.x PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUDE_DIRS})
+target_include_directories(coil_convert.x PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUDE_DIRS})
