--- a/src/field/CMakeLists.txt
+++ b/src/field/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_library(libneo_field OBJECT
+add_library(libneo_field SHARED
     field_base.f90
     example_field.f90
     biotsavart.f90
