--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -110,3 +110,5 @@ set_tests_properties(test_mympilib PROPERTIES  PASS_REGULAR_EXPRESSION "Derived 
 add_test(NAME test_system_utility
          COMMAND test_system_utility.x)
 set_tests_properties(test_system_utility PROPERTIES  FAIL_REGULAR_EXPRESSION "WARNING: resource usage could not be determined.")
+
+add_subdirectory(field)
