--- a/test/field/CMakeLists.txt
+++ b/test/field/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 add_library(util_for_test OBJECT util_for_test.f90)
 
+add_executable(test_biotsavart.x test_biotsavart.f90)
+target_link_libraries(test_biotsavart.x PRIVATE libneo_field
+                                                util_for_test)
+
 add_library(util_for_test_field OBJECT util_for_test_field.f90)
 include_directories(${CMAKE_BINARY_DIR}/src/field)
 target_link_libraries(util_for_test_field PRIVATE libneo_field)
