--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -112,3 +112,4 @@ add_test(NAME test_system_utility
 set_tests_properties(test_system_utility PROPERTIES  FAIL_REGULAR_EXPRESSION "WARNING: resource usage could not be determined.")
 
 add_subdirectory(field)
+add_subdirectory(polylag)
