--- a/test/field/CMakeLists.txt
+++ b/test/field/CMakeLists.txt
@@ -27,9 +27,16 @@ target_link_libraries(test_biotsavart_field.x PRIVATE neo
                                                       util_for_test)
 add_test(NAME test_biotsavart_field COMMAND test_biotsavart_field.x)
 
+add_executable(test_polylag_field.x test_polylag_field.f90)
+target_link_libraries(test_polylag_field.x PRIVATE neo
+                                                  util_for_test_field
+                                                  util_for_test)
+add_test(NAME test_polylag_field COMMAND test_polylag_field.x)
+
 set_tests_properties(
     test_biotsavart
     test_field
     test_example_field
     test_biotsavart_field
+    test_polylag_field
     PROPERTIES LABELS "field")
